# DevCon2019-Ticket-Engine

./: CMakeLists.txt  conanfile.txt  csv_parser.cpp  csv_writer.h  devcon_ticket.cpp  devcon_ticket.h  main.cpp
assets/: tickets.csv
